# dekapu-switch-bot

./: .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
app/cli/: _ctl_log.py  bode_margins.py  calibrate_world.py  decode_demo.py  find_button.py  log_video.py  map_room.py  patrol_buttons.py  probe_axes.py  sim_face.py  sim_video.py
app/control/: actuator.py  controller.py  guidance.py  maneuvers.py  osc.py  pid.py  pilot.py  recording.py  telemetry.py
app/mapping/: draw.py  live.py  mapper.py  render.py
app/perception/: capture.py  decode.py  reader.py  spec.py
app/spatial/: navigation.py  triangulate.py
app/sysid/: identify.py  simplant.py  worldcal.py
docs/: architecture.md  gain-tuning.md  pose-telemetry-hud-spec.md  system-identification.md  usage.md  verification.md
examples/: pilot_patrol.py
examples/dekapu/: main.py
hlsl/: PoseTelemetryHUD.shader
pose_hud/: __init__.py  actuator.py  capture.py  control.py  controller.py  decode.py  encode.py  maneuvers.py  mapping.py  mapping_render.py  navigation.py  osc.py  reader.py  simplant.py  spec.py  sysid.py  telemetry.py  triangulate.py
pose_hud/cli/: _ctl_log.py  _keys.py  decode_demo.py  find_button.py  map_room.py  patrol_buttons.py  probe_axes.py
src/vrc_autopilot/: __init__.py
src/vrc_autopilot/cli/: _keys.py  _logging.py  bode_margins.py  calibrate_world.py  decode_demo.py  find_button.py  log_video.py  map_room.py  probe_axes.py
src/vrc_autopilot/control/: actuator.py  controller.py  guidance.py  osc.py  (+5 more)
tests/: test_actuator.py  test_adaptive.py  test_control.py  test_guidance.py  test_maneuvers.py  test_mapping.py  test_navigation.py  test_osc.py  test_pid.py  test_pilot.py  test_recording.py  test_roundtrip.py  test_sysid.py  test_telemetry.py  test_triangulate.py  test_vec.py  test_worldcal.py
(+16 files in other folders)
