[project]
name = "dekapu-switch-bot"
version = "0.1.0"
description = "VRChat PoseTelemetryHUD 6DoF decoder + OSC feedback control"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.1",
    "scipy>=1.13",
    "mss>=9.0",
    "python-osc>=1.9",
    "matplotlib>=3.8",
    "pydirectinput>=1.0.4",
]

[project.scripts]
decode-demo = "app.cli.decode_demo:main"
map-room = "app.cli.map_room:main"
find-button = "app.cli.find_button:main"
patrol-buttons = "app.cli.patrol_buttons:main"
probe-axes = "app.cli.probe_axes:main"
sim-face = "app.cli.sim_face:main"
sim-video = "app.cli.sim_video:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
